package com.example.SOEX_PROJECT_JRN.externalservices;

import com.example.SOEX_PROJECT_JRN.model.TransportRequest;
import com.example.SOEX_PROJECT_JRN.model.TransportResponse;

public interface TransportProviderPort {
    TransportResponse fetchData(TransportRequest request);
}
